--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- Json-->
 
-          <div class="container-fluid">
+          <div class="container">
             <br>
             
             <h2 class="display-5 fw-bold">Lista de Productos</h2>
