--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                           <div class="texto-portada" style="max-width: 800px;">
                               <h6 class="text-white text-uppercase mb-3 " style="letter-spacing: 3px;">¿Aún no sabes cual elegir? </h6>
                               <h1 class="display-1 text-capitalize text-white mb-3">Tu próximo nivel te espera aquí</h1>
-                              <h5 class="mx-md-5 px-5">¡ Tenemos las mejores juegos para ti !</h5>
+                              <h5 class="mx-md-5 px-5">¡ Tenemos los mejores juegos para ti !</h5>
                               <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#info">¡Compra Ya!</a>
                           </div>
                       </div>
